/* $Id: ChangeLog,v 1.1741 2001-10-11 17:04:40 sandervl Exp $ */

 2001-10-11: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o SetScrollRange: return error if min > max or out of range
                                  (ERROR_INVALID_SCROLLBAR_RANGE)
                  (behaviour of NT4, SP6)
                o Scrollbar control window not disabled properly when using 
                  EnableWindow instead of EnableScrollbar. (handle WM_ENABLE 
                  and call EnableScrollbar)
                o Forward WM_SYSCOMMAND to Parent (for scrollbar control window
                  with size grip style)
    - WSOCK32:  o Fake IP_HDRINCL & IP_TTL

 2001-10-11: Patrick Haller <patrick.haller@innotek.de>
    - KERNEL32: o added ODIN performance profiler 
                  (perf_0.log for PROFILE builds)
    - SHELL32:  o ~30% speed improvement on shell folder operations

 2001-10-10: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Do not blindly add ODIN_FUNCTION macros to functions that
                  get called very often. (like IsWindow, GetParent & IsWindowVisible)
                  This tends to make logfiles very big...
    - WSOCK32:  o Added IP_ADD_MEMBERSHIP, IP_DROP_MEMBERSHIP, IP_MULTICAST_LOOP &
                  IP_MULTICAST_TTL to setsockopt
                o Add support for WS2_32 IPPROTO_IP options
    - WS2_32:   o Translate IPPROTO_IP options in setsockopt before calling
                  wsock32
    - DDRAW:    o Commented out DiveAcquire/DeaquireFrameBuffer for now
                  (surflock/unlock)

 2001-10-10: Patrick Haller <patrick.haller@innotek.de>
    - KERNEL32: o added IOCTL_CDROM_EJECT_MEDIA
                        IOCTL_CDROM_LOAD_MEDIA
                        IOCTL_CDROM_PAUSE_AUDIO
                        IOCTL_CDROM_STOP_AUDIO
                        IOCTL_CDROM_RESUME_AUDIO
                        IOCTL_CDROM_PLAY_AUDIO_MSF
                o added IOCTL_STORAGE_EJECT_MEDIA